@@ -1,0 +1,27 @@
+<ul style="display: none">
+  <li tal:define="
+    name string:daviz.properties;
+    editform python:view.get_edit(name);
+    label python:editform.label;
+    id python:name.replace('.', '-');"
+    tal:condition="editform"
+    tal:attributes="id string:$id-header">
+    <a tal:attributes="href string:#$id-tab">
+      <span tal:content="label">Edit View</span>
+    </a>
+  </li>
+</ul>
+
+<div tal:define="
+  name string:daviz.properties;
+  editform python:view.get_edit(name);
+  label python:editform.label;
+  id python:name.replace('.', '-');"
+  tal:attributes="id string:$id-tab"
+  tal:condition="editform">
+  <form method="post"
+    tal:define="name python:editform.__name__"
+    tal:attributes="action string:${here/absolute_url}/@@$name">
+    <tal:editform replace="structure editform" />
+  </form>
+</div>
